<resources>
    <string name="app_name">Insurely</string>
    <string name="copyright">Copyright © 2020 Spudg Studios</string>
    <string name="all_rights_reserved">All rights reserved. By using this application, you agree that the creator of this application is not responsible for any losses or damages.</string>
    <string name="licensed_apache_2_0">Licensed under the Apache License 2.0</string>
    <string name="larswerkman_holocolorpicker">larswerkman/HoloColorPicker</string>
    <string name="google_material_design_icons">google/material-design-icons</string>
    <string name="steve_matteson_open_sans_light_font">Steve Matteson / Open Sans Light font</string>
    <string name="about_insurely">About Insurely</string>
    <string name="insurely_logo">Insurely Logo</string>
    <string name="v1_0_0_made_by_spudg_studios">v1.0.0, made by Spudg Studios</string>
    <string name="insurely_about_info">Insurely is a free application designed to make the chore of keeping track of insurance policies easier. Get notifications to remind you when a policy is approaching expiry and you can shop around and get the best renewal price - instead of letting it roll over and potentially paying more than you need to.\n\nSpudg Studios is currently a one-man development studio and this is an early version of the application, so if you have any suggestions or you\'ve found a bug, please send an email below!</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_on_play_store">Rate on Play Store</string>
    <string name="send_an_email">Send an email</string>
    <string name="add_policy">+ Policy</string>
    <string name="active_policies">Active policies</string>
    <string name="about">About</string>
    <string name="tags">Tags</string>
    <string name="no_policies_text">No insurance policies added yet. When policies have been added, you\'ll get notifications as the renewal date approaches, to remind you to shop around and find the best deal in time for renewal. \n\nAdd a policy using the button below to get started!</string>
    <string name="add_tag">+ tag</string>
    <string name="all_tags">All Tags</string>
    <string name="select_policy_expiration">Select policy expiration</string>
    <string name="submit">Submit</string>
    <string name="add_policy_no_plus">Add policy</string>
    <string name="add">Add</string>
    <string name="add_new_tag">Add New Tag</string>
    <string name="delete_policy">Delete policy</string>
    <string name="delete_tag_warning">Are you sure you want to delete this tag?\n\nAny policies under this tag will be reverted to \'Other Insurance\'.</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="delete">Delete</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="insurely">Insurely</string>
    <string name="done">Done</string>
    <string name="update_policy">Update policy</string>
    <string name="price">Price</string>
    <string name="expiration_date">Expiration date:</string>
    <string name="today">today</string>
    <string name="note">Note</string>
    <string name="policy_length">Policy length:</string>
    <string name="update_tag">Update Tag</string>
    <string name="name">Name</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="policy_expiration_placeholder">Policy expires on 23 Nov 2021</string>
    <string name="insurance_provider_placeholder">Admiral insurance</string>
    <string name="renewal_time_placeholder">Up for renewal in 285 days</string>
    <string name="default_tag">Default tag</string>
    <string name="version_by_ss">v%1$s, made by Spudg Studios</string>
    <string name="day_month_year">%1$s %2$s %3$s</string>
    <string name="policy_expires_date">Policy expires on %1$s</string>
    <string name="days_until_renewal">%1$s days until renewal</string>
    <string name="day_until_renewal">%1$s day until renewal</string>
    <string name="expires_today">Expires today</string>
    <string name="day_overdue">%1$s day overdue</string>
    <string name="days_overdue">%1$s days overdue</string>
</resources>