<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background_solid"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/delete_tag"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/delete_tag_warning"
        android:textColor="@android:color/black"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDeleteDeleteTag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans_light"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/delete"
            android:textColor="#673AB7" />

        <TextView
            android:id="@+id/tvCancelDeleteTag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans_light"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@android:color/black" />

    </LinearLayout>
</LinearLayout>