<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background_solid"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/update_tag"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNameLayoutUpdateTag"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNameUpdateTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_light"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLength="14"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.larswerkman.holocolorpicker.ColorPicker
        android:id="@+id/colourPickerUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvUpdateUpdateTag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans_light"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/update"
            android:textColor="#673AB7" />

        <TextView
            android:id="@+id/tvCancelUpdateTag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans_light"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@android:color/black" />

    </LinearLayout>
</LinearLayout>