<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background_solid"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/add_policy_no_plus"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/policy_tag_layout_add"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/dropdown_border">

            <Spinner
                android:id="@+id/policy_tag_spinner_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorPrimaryDark"
                android:overlapAnchor="false"
                android:spinnerMode="dropdown" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/expiration_date"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/change_date_add_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/today"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNoteLayoutAddPolicy"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNoteAddPolicy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans_light"
            android:hint="@string/note"
            android:inputType="text"
            android:maxLength="48"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/policy_length"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/policy_frequency_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:layout_weight="2"
            android:background="@drawable/dropdown_border">

            <Spinner
                android:id="@+id/policy_frequency_spinner_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorPrimaryDark"
                android:overlapAnchor="false"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/policy_price_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/policy_price_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/open_sans_light"
                android:hint="@string/price"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAddPolicy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans_light"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/add"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tvCancelAddPolicy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/open_sans_light"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@android:color/black" />

    </LinearLayout>
</LinearLayout>